# microtrade

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  microdata-layout.xls  pyproject.toml
.github/workflows/: publish.yml
examples/: microtrade.yaml  ops_demo.py
src/microtrade/: __init__.py  _zip_deflate64.py  cli.py  config.py  discover.py  excel_spec.py  ingest.py  pipeline.py  schema.py  write.py
src/microtrade/ops/: __init__.py  manifest.py  planner.py  runner.py  settings.py  transport.py
src/microtrade/specs/exports_nonus/: v2020-01.yaml
src/microtrade/specs/exports_us/: v2020-01.yaml
src/microtrade/specs/imports/: v2020-01.yaml
tests/: _helpers.py  conftest.py  test_discover.py  test_excel_spec.py  test_helpers.py  test_ingest.py  test_inspect.py  test_pipeline.py  test_schema.py  test_smoke.py  test_write.py  test_zip_deflate64.py
tests/ops/: conftest.py  test_hashing.py  test_manifest.py  test_match_raw.py  test_planner.py  test_runner.py  test_runner_integration.py  test_settings.py  test_transport.py
