[project]
name = "microtrade"
version = "0.0.0"
description = "Turn zipped FWF trade microdata into a Hive-partitioned Parquet dataset."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "microtrade contributors" }]
dependencies = [
    "polars[excel]>=1.20",
    "pyarrow>=17",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
microtrade = "microtrade.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microtrade"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/microtrade"]

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --cov=microtrade --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["microtrade"]
branch = true
